# ggj-2019

./: .gitignore  .travis.yml  CMakeLists.txt
data/: map.txt
src/: AnimatedSprite.cpp  AnimatedSprite.hpp  AssetCache.cpp  AssetCache.hpp  Bar.cpp  Bar.hpp  Chunk.cpp  Chunk.hpp  Game.cpp  Game.hpp  GameScene.cpp  GameScene.hpp  InteractiveDoor.cpp  InteractiveDoor.hpp  InteractiveObject.cpp  InteractiveObject.hpp  InteractiveObjects.cpp  InteractiveObjects.hpp  InteractiveSink.cpp  InteractiveSink.hpp  InteractiveStove.cpp  InteractiveStove.hpp  Map.cpp  Map.hpp  NPC.cpp  NPC.hpp  Player.cpp  Player.hpp  StandardObject.cpp  StandardObject.hpp  StaticObjects.cpp  StaticObjects.hpp  Tileset.cpp  Tileset.hpp
